Removed bugs and separated into new method handleConstraintErrors